test and debug api endpoints
